# tensortrans

./: README.md  pyproject.toml
.trunk/: trunk.yaml
tensortrans/: cli.py
tests/: test_tensortrans.py
