[tool.poetry]
name = "tensortrans"
version = "0.1.0"
description = ""
authors = ["Adi Gudimella <adgudime@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.3.1"
pytest = "^7.2.1"

[tool.poetry.scripts]
tensortrans = "tensortrans.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
